assets/styles/style.css
:root {
  --color-green-100: #beee7a;
  --color-green-200: #86c232;
  --color-green-300: #61892f;
  --color-grey-200: #474b4f;
  --color-grey-300: #6b6e70;
  --color-grey-400: #222629;
  --border-radius: 4px;
}

/* *,
*::after,
*::before {
  box-sizing: border-box;
} */

body {
  background-color: var(--color-grey-400);
  color: white;
  font-family: "Montserrat", sans-serif;
  margin-inline:0;
  margin-block:0;
  padding-inline:0;
  padding-block:0;
  line-height: 1.5;
  letter-spacing: .15rem;
  letter-spacing: 1.2px;
}

h1, h2, h3 {
  font-family: "Dosis", sans-serif;
}

#header h2 {
  font-weight: 300;
}

h1,h2,h3,p { text-align: center;}

h2 {
  color: var(--color-green-300);
}

h3 {
  color: var(--color-green-200);
  margin-block-end: 0;
}

a {
  color: var(--color-green-100);
}

ul,
ol {
  list-style: none;
  padding-inline: 0;
  padding-block: 0;
  margin-inline: 0;
  margin-block-start: 1rem;
  margin-block-end: 3.5rem;
}

nav {
  position: fixed;
  width: 100%;
  top: 94%;
  background-color: var(--color-grey-400);
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);

}

nav ul {
  display: flex;
  flex-flow: wrap;
  justify-content: space-around;
  align-items: center;
}

nav ul a {
  text-decoration: none;
}

main {
  max-width: 100rem;
  margin-inline:auto;
  padding-inline: 1rem;
}

section {
  width: fit-content;
  margin-block-start: 0;
  margin-block-end: 3rem;
  margin-inline: auto;
}

dt,dd {
  display: inline;
  margin-inline:0;
  padding-inline:0;
}

div {
  display: flex;
  justify-content: space-between;
}

div dt {
  margin-inline-end: 2.5rem;
}

img {
  display: block;
  margin-inline:auto;
  border-radius: var(--border-radius);
}

.history {
  font-style: italic;
  font-size: .8rem;
  margin-block: .5rem;
  font-weight: bold;
}

.stack {
  position: relative;
  font-weight: bold;
}
.stack::after {
  content: "";
  position: absolute;
  background-color: var(--color-green-300);
  height: 10px;
  width: 100%;
  top: 10px;
  left: -8px;
  z-index: -1;
}


@media only screen and (min-width:1250px) {
  h1,h2,h3,p { text-align: left;}

  section, img {
    margin-inline: initial;
  }

  nav {
    display: none;
  }

  main {
    display: grid;
    grid-template-columns: 1rem 34rem 1fr 1rem;
    grid-template-rows: min-content 12rem 29rem 1fr 4rem;
    gap: 1rem;
  }

  h1 {
    grid-column: 2/-1;
  }

  #header {
    grid-column: 2/3;
  }

  #header h2 {
    font-size: 3rem;
    margin-block-start: 0;
  }

  #header p {
    font-size: 2rem;
  }

  #personal-profile {
    grid-column: 2/3;
    width: 20rem;
    display: flex;
    flex-direction: column;
  }

  #personal-profile img {
    order: -1;
  }

  #skills {
    grid-column: 2/3;
    width: 20rem;
    margin-block-end: 0;
  }

  #contact {
    grid-column: 2/3;
    width: 20rem;

  }

  #work-experience {
      grid-row: 2/4;
      grid-column: 3/4;
  }  

  #education-history {
    grid-row: 8/9;
    grid-column: 3/4;
  }

  #work-experience ul li,
  #education-history ul li {
    position: relative;
  }


  #work-experience ul li::before,
  #education-history ul li::before {
    position: absolute;
    content: '';
    height: 10px;
    width: 10px;
    background-color: var(--color-green-300);
    border-radius: 50%;
    top: 6px;
    left: -20px;
  }
}

